# repdoc

./: .gitignore  README.md  pyproject.toml  repdoc.py  setup.py  tox.ini
repdoc/: creditos_asignatura.py  ctext.py  date_last_update.py  define_gui_layout.py  definitions.py  display_in_terminal.py  export_to_html_bitacora.py  export_to_html_index.py  export_to_html_profesores.py  export_to_html_resultado.py  export_to_html_tablas_asignaturas.py  export_to_html_titulaciones.py  fill_cell_with_previous_value.py  filtra_asignaturas.py  filtra_seleccion_del_profesor.py  filtra_titulaciones.py  new_uuid.py  read_tabla_asignaturas.py  read_tabla_profesores.py  read_tabla_titulaciones.py  repdoc.py  rsync_html_files.py  str_nonan.py  update_ronda_profesor.py  version.py
src/repdoc/: date_last_update.py  define_gui_layout.py  definitions.py  export_to_html_bitacora.py  export_to_html_index.py  export_to_html_profesores.py  export_to_html_resultado.py  fill_cell_with_previous_value.py  filtra_asignaturas.py  filtra_seleccion_del_profesor.py  filtra_titulaciones.py  new_uuid.py  read_tabla_profesores.py  repdoc.py  rsync_html_files.py  str_nonan.py  update_ronda_profesor.py  version.py
